# datafusion

./: .gitmodules  Cargo.toml
.claude/: settings.local.json
benchmarks/: .gitignore
benchmarks/slice-search/: ANALYSIS.md  Cargo.toml
benchmarks/slice-search/benches/: slice_search.rs
benchmarks/slice-search/results/: ANALYSIS.md  plot_results.py  slice_search_benchmark.txt  slice_search_i64_len32.txt  slice_search_results.txt
benchmarks/slice-search/src/: branchless.rs  lib.rs
benchmarks/src/: sort_tpch.rs
benchmarks/src/tpch/: convert.rs  run.rs
datafusion-examples/: Cargo.toml
datafusion-examples/examples/: relation_planner_basic.rs  relation_planner_chain.rs  relation_planner_support.rs  tracing.rs
datafusion-examples/examples/relation_planner/: basic.rs  chain.rs  csv_virtual_tables.rs  generate_series.rs  join_override.rs  layered.rs  match_recognize.rs  system_info.rs  table_functions.rs  table_sample.rs
datafusion/common-runtime/src/: join_set.rs
datafusion/common/src/: hash_utils.rs
datafusion/core/: Cargo.toml
datafusion/core/src/execution/: session_state.rs
datafusion/expr/src/: planner.rs
datafusion/physical-expr/benches/: in_list_strategy.rs
datafusion/physical-plan/src/: execution_plan.rs
datafusion/sql/src/: planner.rs
datafusion/sql/tests/: sql_integration.rs
datafusion/sqllogictest/: Cargo.toml
datafusion/sqllogictest/src/: lib.rs  test_context.rs
datafusion/sqllogictest/test_files/: substrait.slt  virtual_row_num.slt
datafusion/virtual-row-num-poc/: Cargo.toml
datafusion/virtual-row-num-poc/src/: lib.rs
(+25 files in other folders)
