[package]
authors = { workspace = true }
description = "Proof-of-concept virtual __virtual_row_num Parquet table provider"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "datafusion-virtual-row-num-poc"
publish = false
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true, default-features = true }
datafusion-catalog = { workspace = true }
datafusion-catalog-listing = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-datasource-parquet = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-expr-common = { workspace = true }
datafusion-physical-plan = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
